# rexglue-sdk

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-linux-amd64.yaml  build-win-amd64.yaml
cmake/: rexglueConfig.cmake.in  rexglue_helpers.cmake  rexglue_install.cmake
include/rex/: cvar.h  flags.h  rex_app.h  runtime.h
include/rex/audio/xma/: context.h  decoder.h
include/rex/codegen/: test_support.h
include/rex/filesystem/: entry.h
include/rex/graphics/: command_processor.h  flags.h  graphics_system.h
include/rex/graphics/d3d12/: graphics_system.h
include/rex/graphics/vulkan/: graphics_system.h
include/rex/input/sdl/: sdl_input_driver.h
include/rex/input/xinput/: xinput_input_driver.h
include/rex/ppc/: function.h
include/rex/system/: elf_module.h  function_dispatcher.h  kernel_state.h  module.h  xex_module.h  xthread.h
include/rex/system/interfaces/: graphics.h
include/rex/ui/overlay/: debug_overlay.h
include/rex/ui/vulkan/: device.h  presenter.h
scripts/ida/: export_named_funcs.py
src/audio/: CMakeLists.txt  audio_system.cpp  xma_context.cpp  xma_decoder.cpp
src/audio/nop/: nop_audio_system.cpp
src/audio/sdl/: sdl_audio_driver.cpp
src/codegen/: builders.h  codegen.cpp  codegen_writer.cpp  config.cpp  instruction_dispatch.cpp
src/codegen/builders/: logical.cpp  system.cpp  vector.cpp
src/filesystem/: virtual_file_system.cpp
src/filesystem/devices/: host_path_device.cpp  host_path_entry.cpp  host_path_entry.h
src/graphics/: command_processor.cpp  flags.cpp  graphics_system.cpp
src/graphics/d3d12/: command_processor.cpp  graphics_system.cpp  pipeline_cache.cpp
src/graphics/pipeline/render_target/: cache.cpp
src/graphics/pipeline/shader/: spirv_translator.cpp
src/graphics/pipeline/texture/: cache.cpp
src/graphics/vulkan/: graphics_system.cpp
src/input/: CMakeLists.txt  input_system.cpp
src/input/sdl/: sdl_input_driver.cpp
src/input/xinput/: xinput_input_driver.cpp
src/kernel/: CMakeLists.txt
src/kernel/crt/: string.cpp
src/kernel/xam/: xam_task.cpp  xam_ui.cpp  xam_user.cpp
src/kernel/xboxkrnl/: xboxkrnl_audio.cpp  xboxkrnl_io.cpp  xboxkrnl_io_info.cpp  xboxkrnl_ob.cpp  xboxkrnl_threading.cpp
src/rexglue/: CMakeLists.txt
src/system/: CMakeLists.txt  elf_module.cpp  function_dispatcher.cpp  kernel_module.cpp  kernel_state.cpp  module.cpp  runtime.cpp  user_module.cpp  xex_module.cpp  xfile.cpp  xthread.cpp
src/system/util/: object_table.cpp
src/system/xam/: app_manager.cpp
src/ui/: imgui_drawer.cpp  rex_app.cpp
src/ui/overlay/: debug_overlay.cpp  settings_overlay.cpp
src/ui/vulkan/: vulkan_device.cpp  vulkan_presenter.cpp
